bug fixes - now spacing works for length 2 in calendar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -607,7 +607,7 @@ img.letter {
 
 .thanks img {
   width: 15%;
-  opacity: 0.8;
+  opacity: 0.7;
   margin-left: 5%;
   float: bottom;
 }
